--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "antd": "4.9.4",
     "eslint-config-prettier": "^8.3.0",
     "jira-dev-tool": "^1.7.61",
     "qs": "^6.10.2",
