--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.0.0",
+    "@emotion/react": "11.1.4",
+    "@emotion/styled": "11.0.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -11,6 +14,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "antd": "4.9.4",
+    "craco-less": "1.17.1",
     "eslint-config-prettier": "^8.3.0",
     "jira-dev-tool": "^1.7.61",
     "qs": "^6.10.2",
@@ -21,9 +25,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
