--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.0.0",
+    "@emotion/core": "11.0.0",
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
     "@testing-library/jest-dom": "^5.16.1",
@@ -15,6 +16,7 @@
     "@types/react-dom": "^17.0.11",
     "antd": "4.9.4",
     "craco-less": "1.17.1",
+    "dayjs": "^1.10.7",
     "eslint-config-prettier": "^8.3.0",
     "jira-dev-tool": "^1.7.61",
     "qs": "^6.10.2",
