--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "craco-less": "1.17.1",
     "dayjs": "^1.10.7",
     "eslint-config-prettier": "^8.3.0",
-    "jira-dev-tool": "^1.7.61",
+    "jira-dev-tool": "1.7.16",
+    "nanoid": "^3.1.30",
     "qs": "^6.10.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "3.5.10",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.3",
     "web-vitals": "^1.1.2"
