--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "3.5.10",
+    "react-router": "^6.1.1",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.3",
     "web-vitals": "^1.1.2"
