--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@welldone-software/why-did-you-render": "^6.2.3",
     "antd": "4.9.4",
     "craco-less": "1.17.1",
     "dayjs": "^1.10.7",
