--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "craco-less": "1.17.1",
     "dayjs": "^1.10.7",
     "eslint-config-prettier": "^8.3.0",
-    "jira-dev-tool": "1.6.18",
+    "jira-dev-tool": "^1.6.59",
     "nanoid": "^3.1.30",
     "qs": "^6.10.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-query": "3.5.10",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-query": "^3.5.10",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
