--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/core": "11.0.0",
     "@emotion/react": "11.1.4",
     "@emotion/styled": "11.0.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,6 +15,7 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
     "@welldone-software/why-did-you-render": "^6.2.3",
     "antd": "4.9.4",
     "craco-less": "1.17.1",
@@ -25,6 +27,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.5.10",
+    "react-redux": "^7.2.6",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
