--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nanoid": "^3.1.30",
     "qs": "^6.10.2",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "13.0.0",
     "react-dom": "^17.0.1",
     "react-query": "^3.5.10",
     "react-router": "^6.1.1",
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@types/qs": "^6.9.7",
+    "@types/react-beautiful-dnd": "13.0.0",
     "json-server": "^0.17.0",
     "prettier": "2.5.1"
   }
