--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "5.1.1",
     "@types/qs": "^6.9.7",
     "@types/react-beautiful-dnd": "13.0.0",
     "json-server": "^0.17.0",
+    "msw": "^0.28.1",
     "prettier": "2.5.1"
   }
 }
